# ---------------------------------------------------------------------------
# Cargo.toml  —  WASM‑only Multiplayer Klondike Solitaire (single crate)
# ---------------------------------------------------------------------------

[package]
name        = "klondike_mp_wasm"
version     = "0.1.0"
edition     = "2024"
authors     = ["えだ <you@example.com>"]
license     = "MIT OR Apache-2.0"
description = "Multiplayer Klondike Solitaire ― Rust ➜ WebAssembly build (Trunk)"

#---------------------------------------------------------------------------
# We only target WebAssembly, so the crate type is `cdylib` (Wasm binary).
[lib]
crate-type = ["cdylib"]

#---------------------------------------------------------------------------
# Shared / cross‑platform dependencies  (all compile to WASM)
[dependencies]
serde                       = { version = "1.0", features = ["derive"] }
serde_json                  = "1.0"
bincode                     = "2.0.0-rc.3"
thiserror                   = "1.0"

# --- WebAssembly‑specific crates ------------------------------------------
wasm-bindgen                = { version = "0.2.92", features = ["serde-serialize"] }
web-sys                     = { version = "0.3.69", features = [
    "Window", "Document", "Element",
    "HtmlCanvasElement", "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent",
    "KeyboardEvent", "MouseEvent",
    "console"
] }
js-sys                      = "0.3.69"
console_error_panic_hook    = "0.1"

# Optional: tiny allocator to shrink Wasm size (enable via `wee_alloc` feature)
wee_alloc                   = { version = "0.4", optional = true }

#---------------------------------------------------------------------------
# Compile‑time features
[features]
# Enable to replace the default allocator with `wee_alloc` for smaller .wasm
slim = ["wee_alloc"]

#---------------------------------------------------------------------------
# Release build tuned for small Wasm payload
[profile.release]
opt-level      = "z"
lto            = true
codegen-units  = 1
strip          = "symbols"
# ---------------------------------------------------------------------------
